# ink

./: .pre-commit-config.yaml  Cargo.toml  README.md  justfile
.cargo/: audit.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  quality.yml  security.yml
contrib/alfred/: ink.alfredworkflow  ink_alfred
contrib/fzf/: ink_fzf  ink_mark  ink_rg  ink_search
src/: bookmarks.rs  cli.rs  list.rs  main.rs  markdown.rs  models.rs  note.rs  prompt.rs  search.rs  template.rs  utils.rs  walk.rs  write.rs
src/search/: index.rs  index_updater.rs  mod.rs  query.rs
src/settings/: main.rs  mod.rs
src/settings/config/: default-note.template.md  default.toml
tests/: facet_parsing_warnings.rs  search_corrupted_tags.rs
