[package]
name = "ink"
description = "ink: cli for markdown"
version = "0.8.1"
edition = "2021"
repository = "https://github.com/jacobb/ink/"
categories = ["command-line-utilities"]
license = "Unlicense OR MIT"
keywords = ["markdown", "notes"]

[lints]
workspace = true

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
multiple_crate_versions = "allow"

[workspace.lints.rust]
warnings = "deny"

[profile.release]
strip = "symbols"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
config = {version = "0.15.16", features = ["toml"] }
chrono = {version = "0.4.42", features = ["serde"] }
minijinja = "2.13.0"
gray_matter = "0.3.2"
walkdir = "2.3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tantivy = "0.25"
dirs = "6.0"
reqwest = { version = "0.12", features = ["json", "blocking"] }
scraper = "0.25"
regex = "1.12.2"
globset = "0.4"
slab = "0.4.11"

# Security updates for vulnerable dependencies
crossbeam-channel = "0.5.15"
idna = "1.1.0"
openssl = "0.10.75"

[dev-dependencies]
tempfile = "3.23"
